<resources>
    <string name="app_name">Video Light Compressor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Video Compressor</string>
    <string name="menu_gallery">Result Folder</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="compress_video">Compress Video</string>
    <string name="start_compress">Start</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_message">Do you want to cancel current job?</string>
    <string name="compress">Compress</string>
    <string name="keep_original_resolution">Keep Original Resolution</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_info">Video Properties</string>
    <string name="video_detail">Video Detail</string>
    <string name="high">high</string>
    <string name="medium">medium</string>
    <string name="low">low</string>
    <string name="path">Path:</string>
    <string name="resolution">Resolution:</string>
    <string name="mime_type">Mime Type:</string>
    <string name="file_size">File Size:</string>
    <string name="duration">Duration:</string>
    <string name="msg_failed_to_compress">Failed to compress!</string>
    <string name="compressing">Compressing… %d%%</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="compression_result">Compression Result</string>
    <string name="video_deleted_msg">Video has been deleted!</string>
    <string name="video_deleted_msg_failed">Failed to delete Video!</string>
    <string name="delete_video">Delete Video</string>
    <string name="delete_video_msg">Do you want to delete this Video?</string>
    <string name="permission_denied">Permission denied</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="compressed_folder">Compressed Folder</string>
    <string name="app_compressed_folder">/Movies/VideoCompressor</string>
    <string name="subject_email">[%s] Feedback</string>
    <string name="support_email">hdstarproduction@gmail.com</string>
    <string name="share_app_body_msg">A Lightweight Video Compressor app. You can download and install following link\n %s</string>
</resources>